--- a/library.properties
+++ b/library.properties
@@ -6,5 +6,5 @@ sentence=Configures and communicates with the SparkFun Qwiic AS7341L 10-Channel 
 paragraph=This library allows the user to measure light spectrum in 10 different channels: 415nm, 445nm, 480nm, 515nm, 555nm, 590nm, 630nm, 680nm, clear and near infrared.
 This sensor will measure the color components in a specific target, decomposing light into these individual components. 
 category=Sensors
-url=https://sparkfun.com/products/17719
+url=https://github.com/sparkfun/SparkFun_AS7341X_Arduino_Library
 architectures=*
